[package]
name = "fastdfs-client-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.43.0",features = ["full"]}
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
deadpool = { version = "0.12",features = ["managed","rt_tokio_1"] }
deadpool-runtime = "0.1.4"
dashmap = "6.1"